--- a/css/index.css
+++ b/css/index.css
@@ -14,13 +14,13 @@ body{
 
 .card_container{
     margin:auto;
-    max-width: 370px;
+    max-width: 25em;
 }
 
 .card {
     transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
     background-color: #fff;
-    width: 400px;
+    width: 25em;
     position: relative;
     border-radius: 12px;
     overflow: hidden;
@@ -34,7 +34,7 @@ body{
 }
 
 .card_head {
-    height: 250px;
+    height: 15.625em;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
 }
@@ -47,7 +47,7 @@ body{
     background-repeat: no-repeat;
     width: 100%;
     position: absolute;
-    height: 250px;
+    height: 15.625em;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     top: 0;
@@ -59,7 +59,7 @@ body{
 
 .card_heart {
     position: absolute;
-    padding: 16px;
+    padding: 1em;
     width: 100%;
     top: 0;
     z-index: 999;
@@ -70,8 +70,8 @@ hr{
 }
 
 .dot {
-    height: 10px;
-    width: 10px;
+    height: 0.625em;
+    width: 0.625em;
     background-color: #485366;
     border-radius: 50%;
     display: inline-block;
@@ -124,7 +124,7 @@ hr{
 
 .realtor-pic{
     width: 4em;
-    margin-right: 1rem;
+    margin-right: 1em;
     border-radius: 50%;
 }
 
