Changed info button color.

--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,7 @@ hr{
 .info{
     z-index: 99998889;
     float: right;
-    background-color: #a6c7df;
+    background-color: #ffd651;
     padding: 0 1em;
     border-radius: 12px;
     margin: 0.3em;
